<resources>
    <string name="app_name">GetBetter Mobile</string>
    <string name="login_desc_title">GetBetter Tele-Diagnosis System</string>
    <string name="login_desc">As part of a research project of De La Salle University, the GetBetter
        Tele-Diagnosis System was designed and developed with financial support form UNICEF, UNDP,
        World Bank, the WHO Special Programme for Research and Training in Tropical Diseases (WHO-TDR).
        The GetBetter team sincerely hopes that this GetBetter Tele-Diagnosis System will be
        instrumental in providing quality healthcare to people from rural, poor and geographically
        isolated areas. We believe that the poor and the marginalized should be able to benefit from
        the major strides of progress in Internet and database technology, and ICT in general.</string>

    <string name="existing_patient">EXISTING PATIENT</string>

    <string-array name="civil_statuses">
        <item>Single</item>
        <item>Married</item>
        <item>Separated</item>
        <item>Widowed</item>
    </string-array>

    <string-array name="genders">
        <item>Male</item>
        <item>Female</item>
    </string-array>

    <string-array name="blood_type">
        <item>O+</item>
        <item>O-</item>
        <item>A+</item>
        <item>A-</item>
        <item>B+</item>
        <item>B-</item>
        <item>AB+</item>
        <item>AB-</item>
    </string-array>

    <string-array name="record_status">
        <item>New</item>
        <item>Updated</item>
        <item>Additional Instructions</item>
        <item>Talk to Health Center</item>
        <item>Talk to Patient</item>
        <item>Urgent</item>
        <item>Diagnosed</item>
    </string-array>

    <string name="title_activity_existing_patient">ExistingPatientActivity</string>
    <string name="action_settings">Settings</string>
    <string name="download">Download</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="patient_profile_image">Patient Profile Image</string>
    <string name="attachment_display">Attachment Display</string>
    <string name="patient_information_form">Patient Information Form</string>
    <string name="audio_recording_icon">Audio Recording Icon</string>
    <string name="record_the_history_of_present_illness">Record the History of Present Illness</string>
    <string name="family_social_history_form">Family/Social History Form</string>
    <string name="view_button_text">View</string>
    <string name="chief_complaint_form">Chief Complaint Form</string>
    <string name="back_button_text">BACK</string>
    <string name="next_button_text">NEXT</string>
    <string name="zoom_view_form">View Form</string>
    <string name="sign_in_button_text">Sign In</string>
    <string name="password">Password</string>
    <string name="email_address">Email Address</string>
    <string name="the_getbetter_team">The GetBetter Team</string>
    <string name="submit_button_text">Submit</string>
    <string name="remove_button_text">Remove</string>
    <string name="health_center">Health Center</string>
    <string name="case_report">CASE REPORT</string>
    <string name="image_title">IMAGE TITLE</string>
    <string name="file_name_placeholder">File Name</string>
    <string name="control_number_placeholder">Control Number</string>
    <string name="chief_complaint_placeholder">Chief Complaint</string>
    <string name="status_placeholder">Status</string>
    <string name="date_placeholder">Date</string>
    <string name="patient_id_placeholder">Patient ID</string>
    <string name="patient_name_placeholder">Patient Name</string>
    <string name="age_gender_placeholder">Age Gender Placeholder</string>
    <string name="additional_notes_instructions">Additional Notes/Instructions</string>
    <string name="history_of_present_illness">History of Present Illness</string>
    <string name="view_updated_case_record_button_text">View Updated Case Record</string>
    <string name="current_user">Current User:</string>
    <string name="select_a_case">SELECT A CASE</string>
    <string name="create_new_case_record">CREATE NEW CASE RECORD</string>
    <string name="upload_case_record_button_text">Upload Case Record</string>
    <string name="view_case_record_button_text">View Case Record</string>
    <string name="search_case_record_hint">Search Case Record</string>
    <string name="select_data_to_be_downloaded">SELECT DATA TO BE DOWNLOADED</string>
    <string name="create_new_patient_record_button_text">NEW PATIENT RECORD</string>
    <string name="upload_patient_record_button_text">Upload Patient Record</string>
    <string name="update_patient_record_button_text">Update Patient Record</string>
    <string name="create_update_case_record_button_text">Create/Update Case Record</string>
    <string name="search_patient_hint">Search Patient</string>
    <string name="select_a_health_center">Select a Health Center</string>
    <string name="current_health_center">Current Health Center:</string>
    <string name="health_center_placeholder">Health Center Placeholder</string>
    <string name="change_health_center_button_text">Change Health Center</string>
    <string name="download_content_button_text">Download Content</string>
    <string name="view_create_patient_records_button_text">View/Create Patient Records</string>
    <string name="logout_button_text">Logout</string>
    <string name="case_record">Case Record</string>
    <string name="upload_button_text">Upload</string>
    <string name="patient_list">Patient List</string>
    <string name="update_case_record_button_text">Update Case Record</string>
    <string name="take_picture_document_button_text">Take picture of document (e.g blood chem results)</string>
    <string name="take_picture_button_text">Take Picture</string>
    <string name="attachments">Attachments</string>
    <string name="files">Files</string>
    <string name="record_label_btn">Record</string>
    <string name="stop_label_btn">Stop</string>
    <string name="play_label_btn">Play</string>
    <string name="record_sound_title">Record Sound</string>
    <string name="lorem_ipsum">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec et
        tellus et sapien dignissim pretium. Donec mollis euismod tortor, at congue neque tincidunt
        at. Vivamus neque turpis, ultrices a iaculis a, sagittis at lacus. Aliquam id eros a neque
        fringilla aliquam. Nam porta elit non pharetra sodales. Sed fringilla nec tellus et
        vulputate.</string>
    <string name="civil_status_placeholder">Civil Status Placeholder</string>
    <string name="blood_type_placeholder">Blood Type Placeholder</string>
    <string name="contact_info_placeholder">Contact Info Placeholder</string>
    <string name="address_placeholder">Address Placeholder</string>
    <string name="number_of_case_records_placeholder">Number of Case Records Placeholder</string>
    <string name="new_case_record_button_text">New Case Record</string>
    <string name="welcome_text">Welcome</string>
    <string name="de_la_salle_university_science_amp_technology_campus"><![CDATA[De La Salle University Science & Technology Campus]]></string>
    <string name="caption_this_image">Caption this image</string>
    <string name="last_name">Last Name</string>
    <string name="birthdate">Birthdate</string>
    <string name="middle_name">Middle Name</string>
    <string name="first_name">First Name</string>
    <string name="gender">Gender</string>
    <string name="civil_status">Civil Status</string>
    <string name="patient_record">PATIENT RECORD</string>
    <string name="required_forms">Required Forms</string>
    <string name="height_cm">Height (CM)</string>
    <string name="weight_kg">Weight (KG)</string>
    <string name="zero_value_placeholder">0</string>
    <string name="temperature_c">Temperature (C)</string>
    <string name="pulse_rate">Pulse Rate</string>
    <string name="respiratory_rate">Respiratory Rate</string>
    <string name="blood_pressure">Blood Pressure</string>
    <string name="file_type_icon">File type icon</string>
    <string name="record_video">Record Video</string>
    <string name="record_sound">Record Sound</string>
    <string name="e_stethoscope">E-stethoscope</string>
    <string name="select_a_file_from_tablet">Select a file from tablet</string>
    <string name="date_of_last_consultation">Date of last consultation</string>
    <string name="blood_type">Blood Type</string>
    <string name="additional_notes">Additional Notes</string>
    <string name="none">None</string>
    <string name="recording_progress_zero">00</string>
    <string name="colon">:</string>
    <string name="recording_status">Recording...</string>
    <string name="age">Age</string>
    <string name="click_to_change_profile_image">Tap to change Profile Image</string>
    <string name="done">Done</string>
    <string name="save">Save</string>
    <string name="record_audio">Record Audio</string>
    <string name="title_page_list">Pages</string>
    <string name="title_page_detail">Page Detail</string>
</resources>
