<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:padding="16dp"
    android:background="@drawable/list_status_drawable">

    <TextView
        android:id="@+id/upload_control_number"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/control_number_placeholder"
        android:textSize="16sp"
        android:textStyle="bold"
        />

    <TextView
        android:id="@+id/upload_caserecord_patient_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/patient_name_placeholder"
        android:textSize="16sp"
        android:textStyle="bold"
        android:layout_marginStart="30dp"
        android:layout_marginLeft="30dp"
        />

    <TextView
        android:id="@+id/upload_caserecord_chief_complaint"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/chief_complaint_placeholder"
        android:textSize="16sp"
        android:textStyle="bold"
        android:layout_marginStart="30dp"
        />

    <TextView
        android:id="@+id/upload_caserecord_status"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/status_placeholder"
        android:textStyle="bold"
        android:textSize="16sp"
        android:layout_marginLeft="30dp"
        android:layout_marginStart="30dp"
        />


</LinearLayout>