<?xml version="1.0" encoding="utf-8"?>
<com.balysv.materialripple.MaterialRippleLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="horizontal" android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:mrl_rippleOverlay="true"
    app:mrl_rippleColor="@color/rippleColor">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp">

        <TextView
            android:id="@+id/case_record_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/date_placeholder"
            android:textSize="16sp"
            />

        <TextView
            android:id="@+id/case_record_chief_complaint"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/chief_complaint_placeholder"
            android:textSize="18sp"
            android:textStyle="bold"
            android:layout_centerVertical="true"
            android:layout_marginLeft="100dp"
            android:layout_marginStart="100dp"
            android:layout_toRightOf="@id/case_record_date" />

        <TextView
            android:id="@+id/case_record_status"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/status_placeholder"
            android:textSize="16sp"
            android:layout_centerVertical="true"
            android:layout_toRightOf="@id/case_record_chief_complaint"
            android:layout_marginLeft="100dp"
            android:layout_marginStart="100dp"/>



    </RelativeLayout>




</com.balysv.materialripple.MaterialRippleLayout>