<?xml version="1.0" encoding="utf-8"?>
<com.balysv.materialripple.MaterialRippleLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:mrl_rippleOverlay="true"
    app:mrl_rippleColor="@color/rippleColor"
    android:padding="8dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="8dp">

        <ImageView
            android:id="@+id/file_type_icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/file_type_icon"
            android:src="@drawable/ic_action_picture"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"/>

        <TextView
            android:id="@+id/summary_page_file_list_item"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/file_name_placeholder"
            android:textSize="18sp"
            android:layout_toEndOf="@id/file_type_icon"
            android:layout_marginStart="24dp"
            android:layout_marginLeft="24dp"
            />

        <Button
            android:id="@+id/attachment_download_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/download"
            android:textAllCaps="true"
            android:visibility="gone"
            android:textColor="@color/blueButton"
            style="?android:borderlessButtonStyle"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            />



    </RelativeLayout>

</com.balysv.materialripple.MaterialRippleLayout>