<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:padding="16dp"
    tools:context="com.dlsu.getbetter.getbetter.RecordAudioFragment">


    <android.support.design.widget.TextInputLayout
        android:id="@+id/audio_file_name_container"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:padding="16dp"
        app:errorEnabled="true">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/audio_file_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Audio Title"/>

    </android.support.design.widget.TextInputLayout>


    <LinearLayout
        android:id="@+id/audio_button_container"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/audio_file_name_container">

        <Button
            android:id="@+id/audio_record_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/record_label_btn"
            android:textColor="@color/cardBackground"
            android:background="@color/greenButton"
            style="?android:borderlessButtonStyle"/>

        <Button
            android:id="@+id/audio_stop_record_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/stop_label_btn"
            android:textColor="@color/cardBackground"
            android:background="@color/redButton"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            style="?android:borderlessButtonStyle"/>

        <Button
            android:id="@+id/audio_play_recorded_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/play_label_btn"
            android:textColor="@color/cardBackground"
            android:background="@color/blueButton"
            style="?android:borderlessButtonStyle"/>


    </LinearLayout>

    <LinearLayout
        android:id="@+id/duration_container"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="16dp"
        android:layout_below="@id/audio_button_container">

        <TextView
            android:id="@+id/record_minutes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/recording_progress_zero"
            android:textSize="24sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/colon"
            android:textSize="24sp"/>

        <TextView
            android:id="@+id/record_seconds"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/recording_progress_zero"
            android:textSize="24sp" />

    </LinearLayout>

    <TextView
        android:id="@+id/recording_status"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/recording_status"
        android:layout_centerHorizontal="true"
        android:visibility="invisible"
        android:textSize="24sp"
        android:layout_marginTop="16dp"
        android:layout_below="@id/duration_container"/>


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:orientation="horizontal"
        android:layout_below="@id/duration_container">

        <Button
            android:id="@+id/record_audio_cancel_btn"
            android:layout_width="wrap_content"
            android:layout_height="36dp"
            android:layout_marginTop="24dp"
            android:padding="8dp"
            android:text="@string/mdtp_cancel"
            android:textColor="@color/blueButton"
            android:layout_marginEnd="4dp"
            style="?android:borderlessButtonStyle"
            />

        <Button
            android:id="@+id/record_audio_done_btn"
            android:layout_width="wrap_content"
            android:layout_height="36dp"
            android:layout_marginTop="24dp"
            android:padding="8dp"
            android:text="@string/mdtp_done_label"
            android:textColor="@color/blueButton"
            style="?android:borderlessButtonStyle"
            />

    </LinearLayout>

</RelativeLayout>
