<?xml version="1.0" encoding="utf-8"?>
<com.balysv.materialripple.MaterialRippleLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:mrl_rippleOverlay="true"
    app:mrl_rippleColor="@color/rippleColor">

    <RelativeLayout
        android:id="@+id/existing_patient_item_card"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/upload_patient_item_profile_image"
            android:layout_width="150dp"
            android:layout_height="100dp"
            android:src="@drawable/profile_picture_placeholder"
            android:contentDescription="@string/patient_profile_image"
            android:layout_marginRight="100dp"
            android:layout_marginEnd="100dp"/>

        <LinearLayout
            android:id="@+id/name_age_gender_container"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_centerVertical="true"
            android:layout_toRightOf="@+id/upload_patient_item_profile_image"
            android:layout_toEndOf="@+id/upload_patient_item_profile_image" >

            <TextView
                android:id="@+id/upload_patient_item_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/patient_name_placeholder"
                android:textStyle="bold"
                android:textSize="24sp"
                android:paddingBottom="4dp"/>

            <TextView
                android:id="@+id/existing_patient_item_gender"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/age_gender_placeholder"
                android:textSize="18sp"
                />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_toRightOf="@+id/name_age_gender_container"
            android:layout_toEndOf="@+id/name_age_gender_container"
            android:layout_centerVertical="true"
            android:layout_marginLeft="150dp"
            android:layout_marginStart="150dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Date of last consultation"
                android:textSize="18sp"
                android:textStyle="bold"
                android:paddingBottom="4dp"/>

            <TextView
                android:id="@+id/existing_patient_date_last_consult"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/date_placeholder"
                android:textSize="18sp"/>


        </LinearLayout>




    </RelativeLayout>

</com.balysv.materialripple.MaterialRippleLayout>